--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -14,6 +14,20 @@
       "id": "@sap/generator-fiori:basic",
       "version": "1.13.5",
       "toolsId": "11701407-6e2b-4054-a730-3364ffcd1504"
+    },
+    "crossNavigation": {
+      "inbounds": {
+        "PPAPlanning-Create": {
+          "semanticObject": "PPAPlanning",
+          "action": "Create",
+          "title": "{{flpTitle}}",
+          "subTitle": "{{flpSubtitle}}",
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          }
+        }
+      }
     }
   },
   "sap.ui": {
